# okkam-test

./: .env.example  Dockerfile  README.md  docker-compose.test.yaml  docker-compose.yaml  pyproject.toml  startup.py  test_data.csv
app/: api.py  config.py  db.py  errors.py  main.py  schemas.py  service.py
tests/: conftest.py  helpers.py  test_audience.py
